--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MovieRRific</title>
+    <title>MovieTube</title>
     <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="swiper-bundle.min.css">
@@ -320,7 +320,7 @@
     </div> -->
 
     <div class="copyright">
-        <p>&#169; Roudranil All Rights Resolved</p>
+        <p>&#169; MovieTube All Rights Resolved</p>
     </div>
 
 
