--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="nav container">
             <a href="index.html" class="logo">
-                Movie<span>RRific</span>
+                Movie<span>Tube</span>
             </a>
             <div class="search-box">
                 <input type="search" name="" id="search-input" placeholder="Search movie">
